# forest

./: .gitignore  AGENT_API_REFERENCE.md  README.md  adding_claude_skill.md  build.sh  config.sample.toml  forest_mcp.py  install.sh  pyproject.toml  start.sh
.claude/commands/: forest.md
static/: index.html
static/assets/: index-D9jD3o0z.js  index-DP7oUQQ8.css
tasks/: api.py  cli.py  config.py  models.py  store.py  tui.py
